--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost/hrm
-ASSET_URL=http://localhost/hrm
+ASSET_URL=http://localhost/hrm/public
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
